# Strata

./: .gitignore  Anchor.toml  Cargo.toml  DEVNET.md  FEEDBACK.md  README.md  TECHNICAL.md  package.json
.firecrawl/: iochain-branding.json
app/: .env.example  brand.md  next.config.ts  package.json
app/app/: globals.css  layout.tsx  page.tsx  providers.tsx
app/components/: activity-ticker.tsx  featured-markets-rail.tsx  featured-showcase-hero.tsx  header-search.tsx  hero-backdrop-board.tsx  hero-landing.tsx  how-it-works-dialog.tsx  how-it-works-modal.tsx  leg-editor.tsx  leg-status-list.tsx  market-badge.tsx  market-collection-boards.tsx  market-identity.tsx  markets-empty-state.tsx  position-detail-client.tsx  product-card.tsx  rolling-number.tsx  scenario-bubble-row.tsx  side-rail-module.tsx  site-footer.tsx  site-header.tsx  status-badge.tsx  status-bar.tsx  strata-mark.tsx  take-position-panel.tsx  tier-editor.tsx  tier-ladder.tsx  trade-flow-pagination.tsx  trade-flow-section.tsx  trade-flow-step-card.tsx  trade-flow-walkthrough.tsx  verify-geo-product-client.tsx  verify-product-client.tsx  watch-geo-product-client.tsx  watch-product-client.tsx  why-strata-section.tsx  writer-pool-panel.tsx
app/lib/: constants.ts  dedupe-by-fixture.ts  explorer.ts  featured-showcase-data.ts  (+11 more)
design/: DESIGN.md
programs/mock-txoracle/: Cargo.toml
programs/mock-txoracle/src/: lib.rs
scripts/: init-config.ts  live-buyer-flow.ts  probe-txline.ts  real-geo-settlement.ts  real-pool-settlement.ts  real-settlement.ts  resume-settle.ts  watch-stream.ts
tests/: strata.ts
(+42 files in other folders)
