[package]
name = "mock-txoracle"
version = "0.1.0"
description = "Local mock of TxLINE's txoracle.validate_stat for testing settle_leg without devnet"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mock_txoracle"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = "0.32.0"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
